--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -6,10 +6,12 @@
     "pages/userInfo/userInfo"
   ],
   "window":{
-    "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
+    "backgroundColor": "#F6F6F6",
+		"backgroundTextStyle": "light",
+		"navigationBarBackgroundColor": "#F6F6F6",
+		"navigationBarTitleText": "E招汇",
+		"navigationBarTextStyle": "black",
+		"navigationStyle": "custom"
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json",
