newDairy第一次尝试

--- a/miniprogram/project.config.json
+++ b/miniprogram/project.config.json
@@ -17,7 +17,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.11.0",
-	"appid": "wxf2c6d2b1f0c648a5",
+	"appid": "wx09774f1476bced70",
 	"projectname": "miniprogram",
 	"debugOptions": {
 		"hidedInDevtools": []
