--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,46 +1,48 @@
 {
-  "pages":[
+  "pages": [
     "pages/index/index",
     "pages/newDiary/newDiary",
     "pages/myDiary/myDiary",
-    "pages/userInfo/userInfo"
+    "pages/userInfo/userInfo",
+    "pages/search/search"
   ],
-  "window":{
+  "window": {
     "backgroundColor": "#F6F6F6",
-		"backgroundTextStyle": "light",
-		"navigationBarBackgroundColor": "#F6F6F6",
-		"navigationBarTitleText": "E招汇",
-		"navigationBarTextStyle": "black",
-		"navigationStyle": "custom"
+    "backgroundTextStyle": "light",
+    "navigationBarBackgroundColor": "#F6F6F6",
+    "navigationBarTitleText": "E招汇",
+    "navigationBarTextStyle": "black",
+    "navigationStyle": "custom"
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json",
-  "tabBar":{
+  "tabBar": {
     "color": "#a9b7b7",
-		"selectedColor": "#848484",
+    "selectedColor": "#848484",
     "borderStyle": "white",
-    "list":[
+    "list": [
       {
-				"selectedIconPath": "/images/tabbar_icon/shouyeSelect.png",
-				"iconPath": "/images/tabbar_icon/shouye.png",
-				"pagePath": "pages/index/index",
-				"text": "首页"
+        "selectedIconPath": "/images/tabbar_icon/shouyeSelect.png",
+        "iconPath": "/images/tabbar_icon/shouye.png",
+        "pagePath": "pages/index/index",
+        "text": "首页"
       },
       {
-				"selectedIconPath": "/images/tabbar_icon/mydiarySelect.png",
-				"iconPath": "/images/tabbar_icon/mydiary.png",
-				"pagePath": "pages/myDiary/myDiary",
-				"text": "日记"
+        "selectedIconPath": "/images/tabbar_icon/mydiarySelect.png",
+        "iconPath": "/images/tabbar_icon/mydiary.png",
+        "pagePath": "pages/myDiary/myDiary",
+        "text": "日记"
       },
       {
-				"selectedIconPath": "/images/tabbar_icon/infoSelect.png",
-				"iconPath": "/images/tabbar_icon/info.png",
-				"pagePath": "pages/userInfo/userInfo",
-				"text": "我的"
+        "selectedIconPath": "/images/tabbar_icon/infoSelect.png",
+        "iconPath": "/images/tabbar_icon/info.png",
+        "pagePath": "pages/userInfo/userInfo",
+        "text": "我的"
       }
     ]
   },
-  "usingComponents":{
-    "bgCanvas":"/components/bgCanvas/bgcanvas"
+  "usingComponents": {
+    "bgCanvas": "/components/bgCanvas/bgcanvas",
+    "backup":"/components/backup/backup"
   }
 }
