--- a/miniprogram/project.config.json
+++ b/miniprogram/project.config.json
@@ -69,6 +69,13 @@
 					"id": -1,
 					"name": "pages/search/search",
 					"pathName": "pages/search/search",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/myDiary/myDiary",
+					"pathName": "pages/myDiary/myDiary",
 					"scene": null
 				}
 			]
