--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -5,6 +5,7 @@
     "pages/newDiary/newDiary",
     "pages/userInfo/userInfo",
     "pages/search/search",
+    "pages/detail/detail",
     "pages/viewDiary/viewDiary"
   ],
   "window": {
