个人信息和查看日记的修改

--- a/miniprogram/project.config.json
+++ b/miniprogram/project.config.json
@@ -23,7 +23,7 @@
 			"disablePlugins": [],
 			"outputPath": ""
 		},
-		"useCompilerModule": true,
+		"useCompilerModule": false,
 		"userConfirmedUseCompilerModuleSwitch": false
 	},
 	"compileType": "miniprogram",
@@ -99,6 +99,13 @@
 					"id": -1,
 					"name": "pages/diaryList/diaryList",
 					"pathName": "pages/diaryList/diaryList",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/userInfo/userInfo",
+					"pathName": "pages/userInfo/userInfo",
 					"scene": null
 				}
 			]
