--- a/miniprogram/project.config.json
+++ b/miniprogram/project.config.json
@@ -106,6 +106,13 @@
 					"id": -1,
 					"name": "pages/userInfo/userInfo",
 					"pathName": "pages/userInfo/userInfo",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/detail/detail",
+					"pathName": "pages/detail/detail",
 					"scene": null
 				}
 			]
