--- a/miniprogram/project.config.json
+++ b/miniprogram/project.config.json
@@ -120,6 +120,13 @@
 					"id": -1,
 					"name": "pages/index/index",
 					"pathName": "pages/index/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/authorize/authorize",
+					"pathName": "pages/authorize/authorize",
 					"scene": null
 				}
 			]
