--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -9,8 +9,7 @@
         "pages/search/search",
         "pages/detail/detail",
         "pages/viewDiary/viewDiary",
-        "pages/diaryList/diaryList",
-        "pages/loader"
+        "pages/diaryList/diaryList"
     ],
     "window": {
         "backgroundColor": "#F6F6F6",
