--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -15,7 +15,7 @@
         "backgroundColor": "#F6F6F6",
         "backgroundTextStyle": "light",
         "navigationBarBackgroundColor": "#F6F6F6",
-        "navigationBarTitleText": "E招汇",
+        "navigationBarTitleText": "多肉日记本",
         "navigationBarTextStyle": "black",
         "navigationStyle": "custom"
     },
